# ParallaxTV

./: .gitignore  README.md  index.html  package-lock.json  package.json
.codex-dist/: index.html
.codex-dist/assets/: index-DRsNEwfF.css  index-Dc7LjcV_.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/details/: ArrowRow.tsx  DetailsCast.tsx  DetailsEpisodes.tsx  DetailsHero.tsx  DetailsOverview.tsx  DetailsRecommendations.tsx  DetailsSeasons.tsx  SectionHeader.tsx  TrailerPlayer.tsx
src/components/media/: BecauseYouWatchedRow.tsx  ContinueWatchingRow.tsx  DiscoveryRow.tsx  FavoritesRow.tsx  GenreRows.tsx  HeroBanner.tsx  LibraryRecentRow.tsx  LibraryRow.tsx  MediaCard.tsx  MediaRow.tsx  NewEpisodesRow.tsx  UpNextRow.tsx  WatchHistoryRow.tsx
src/components/settings/: AboutSettings.tsx  AppearanceSettings.tsx  DiscoverySettings.tsx  (+5 more)
src/hooks/: useAnimeEnrichment.ts  useDetails.ts  useDiscovery.ts  useDiscoveryDetails.ts  useFavorite.ts  useMediaCollection.ts  useNotifications.ts  useTrailer.ts
src/lib/: jellyfin.ts  jellyfinApi.ts  mpvEvents.ts
src/pages/: Dashboard.tsx  Details.tsx  Discover.tsx  EpisodeDetails.tsx  Favorites.tsx  Library.tsx  Login.tsx  Personpage.tsx  RecentlyAdded.tsx  Settings.tsx  VideoPlayer.tsx
src/store/: auth.ts  notifications.ts  player.ts  settings.ts
src/types/: auth.ts  discovery.ts  media.ts  player.ts
src/utils/: images.ts  media.ts  time.ts  titles.ts  trailers.ts
(+30 files in other folders)
